<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yanghanwen.taskmanagementmonster.RegisterActivity"
    android:background="@drawable/wallpaper_ver2"
    >

    <EditText
        android:id="@+id/profilePhoneNum"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/register_phone"
        android:inputType="phone"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="55dp"
        android:backgroundTint="#ffffff"
        android:textColorHint="#CCCCCC"
        android:textColor="#ffffff"
        />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="170dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:textColor="#ffffff"
        />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="320dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/ic_check_circle_white_18dp"
        />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        android:layout_marginLeft="55dp"
        android:backgroundTint="#ffffff"
        android:textColorHint="#CCCCCC"
        android:textColor="#ffffff"

         />


</RelativeLayout>
