<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yanghanwen.taskmanagementmonster.NewTaskActivity">

    <TextView
        android:id="@+id/textViewNewTitle"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:text="@string/new_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textViewNewDescription"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignStart="@+id/textViewNewTitle"
        android:layout_below="@+id/textViewNewTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_description"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewTitle" />

    <EditText
        android:id="@+id/editTextNewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_titile_hint"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewTitle"
        />

    <EditText
        android:id="@+id/editTextNewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_description_hint"
        android:inputType="textPersonName"
        android:maxLength="300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewDescription" />


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/newTask_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="#E47833"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/task_logo"
                android:layout_marginRight="0dp"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageButton
        android:id="@+id/add_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_add_location_white_24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="10dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Specify your location here"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="275dp"
            android:layout_marginLeft="10dp"
            android:textColor="#EEB5A9"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/buttonNewCreate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonNewImage"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/imageView2"
            android:background="#E47833"
            android:text="@string/new_button_create" />

        <Button
            android:id="@+id/buttonNewImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2"
            android:background="#E47833"
            android:text="@string/new_button_image" />

        <TextView
            android:id="@+id/taskCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="50dp"
            android:textColor="#ffb347"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_info_outline_white_24dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="150dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:id="@+id/imageView2" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_location_city_white_24dp"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:id="@+id/coordinateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="105dp"
            android:layout_marginRight="70dp"
            android:textColor="#ffb347"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="65dp"
            />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
